[package]
authors = ["Ganesha Danu <ganeshadanu1@gmail.com>"]
edition = "2018"
name = "izanagi-no-okami"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = {version = "0.9.0-rc.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = {version = "0.2.22", features = ["macros"]}
